--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <title>Blox R.A.T. Proxy</title>
+    <title>e179</title>
     <script>
-        document.location.href = "https://github.com/kckarnige/BloxRatP"
+        document.location.href = "https://github.com/kckarnige/e179"
     </script>
 </head>
 
