--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <html>
 
 <head>
+    <meta property="theme-color" content="#00709e" />
+    <meta property="og:site_name" content="A project by KiCKTheBucket">
+    <meta property="og:title" content="e694: Cleaner embeds and much more!" />
+    <meta property="og:description" content="Works just like official means, just more consistent and flexible! No restrictions, and URLs can end with filenames!" />
+    <meta property="og:image" content="https://e694.net/favicon.png">
     <title>e694</title>
     <script>
         document.location.href = "https://github.com/kckarnige/e694"
