--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta property="og:site_name" content="A project by KiCKTheBucket">
     <meta property="og:title" content="e694: Cleaner embeds for eSix" />
     <meta property="og:description" content="Embeds show post info like rating, score, etc. It also supports displaying video for Discord embeds!" />
-    <meta property="og:image" content="https://e694.net/favicon.png">
+    <meta property="og:image" content="https://e694.net/icon.png">
     <title>e694</title>
     <script>
         document.location.href = "https://github.com/kckarnige/e694"
